--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -13,7 +13,7 @@ jobs:
     steps: 
       - name: Failed Step
         run: |
-          "I will fail"
+          echo "I will fail"
       - name: Say Goodbye
         run: echo "GoodBye"
         
