--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -1,6 +1,10 @@
 name: 02 - Workflow Events
 on: 
-    push
+    push:
+    pull_request:
+    workflow_dispatch:
+    schedule:
+        - cron: "*/5 * * * *"
 
 jobs:
     echo:
