--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -8,5 +8,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Printing Folders
-        run: ls -a
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with: 
+          node-version: '20.x'
+      - name: Install Dependencies
+        run: npm ci
+        working-directory: 04-using-actions
+
