--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v5
+        uses: actions/checkout@latest
       - name: Setup Node
-        uses: actions/setup-node@v5
+        uses: actions/setup-node@latest
         with: 
           node-version: '20.x'
       - name: Install Dependencies
