--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@latest
+        uses: actions/checkout@v4
       - name: Setup Node
-        uses: actions/setup-node@latest
+        uses: actions/setup-node@v4
         with: 
           node-version: '20.19.5'
       - name: Install Dependencies
