--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -4,15 +4,15 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Setup Node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with: 
-          node-version: '20.19.5'
+          node-version: '20.x'
       - name: Install Dependencies
         run: npm ci
-        working-directory: 04-using-actions
+        working-directory: 04-using-actions/my-app
 
