--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -13,6 +13,6 @@ jobs:
         with: 
           node-version: '20.x'
       - name: Install Dependencies
-        run: npm ci
+        run: npm ci --force
         working-directory: 04-using-actions/my-app
 
