removed pull_request

--- a/.github/workflows/05-1-filters-activity-types.yaml
+++ b/.github/workflows/05-1-filters-activity-types.yaml
@@ -1,9 +1,7 @@
 name: 05 1 Filters Activity Types
 on:
-  pull_request:
-    types: [opened, synchronize]
-    branches:
-        - main
+  workflow_dispatch:
+    
 jobs:
   echo: 
     runs-on: ubuntu-latest
