--- a/.github/workflows/05-2-event-filters-and-activity-types.yaml
+++ b/.github/workflows/05-2-event-filters-and-activity-types.yaml
@@ -1,9 +1,7 @@
 name: -5 2 Event Filters And Activity Types
 on:
-  pull_request:
-    types: [closed]
-    branches:
-      - main
+  workflow_dispatch:
+
 jobs:
   echo:
     runs-on: ubuntu-latest
