--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -26,7 +26,7 @@ jobs:
           echo "Run number: ${{ github.run_number}}"
       - name: Rretrive Variables
         run: |
-          echo "$MY_VAR"
+          echo " Variable value: ${{ vars.MY_VAR }}"
       - name: Print Env Variables
         run: |
           echo "Workflow env: $MY_WORKFLOW_VAR"
