--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -8,13 +8,15 @@ on:
         default: false
         description: enable debug
 run-name: 06 Context | DEBUG -  ${{ inputs.debug }}
-
+env:
+  MY_WORKFLOW_VAR: workflow
+  MY_OVERWRITTEN_VAR: workflow
 jobs:
   echo-data:
     runs-on: ubuntu-latest
     env:
-      MY_WORKFLOW_VAR: workflow
-      MY_OVERWRITTEN_VAR: workflow
+      MY_WORKFLOW_VAR: job
+      MY_OVERWRITTEN_VAR: job
     steps:
       - name: Display Information
         run: |
@@ -29,6 +31,8 @@ jobs:
         run: |
           echo " Variable value: ${{ vars.MY_VAR }}"
       - name: Print Env Variables
+        env: 
+          MY_OVERWRITTEN_VAR: step          
         run: |
           echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
           echo "Overwritten var: ${{ env.MY_OVERWRITTEN_VAR }}"
