--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -18,7 +18,7 @@ jobs:
           echo "Branch: ${{ github.ref_name}}"
           echo "Commit SHA: ${{ github.sha}}"
           echo "Runner OS: ${{ runner.os }}"
-      - if: ${{ inputs.debug  == true  && github.ref_name == 'main'}}
+      - if: ${{ inputs.debug  == true  && github.ref_name == 'ein'}}
         name: "[debug] Print when triggered from main"
         run: | 
           echo "I was triggered from main"
