--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,4 +1,5 @@
 name: 07 - Expressions
+run-name: 07 - Using Expression | DEBUG - ${{ inputs.debug && 'ON' || 'OFF'}}
 on: 
   push:
   workflow_dispatch:
@@ -18,7 +19,7 @@ jobs:
           echo "Branch: ${{ github.ref_name}}"
           echo "Commit SHA: ${{ github.sha}}"
           echo "Runner OS: ${{ runner.os }}"
-      - if: ${{ inputs.debug  == true  && github.ref_name == 'ein'}}
+      - if: ${{ inputs.debug  == true  && github.ref_name == 'main' }}
         name: "[debug] Print when triggered from main"
         run: | 
           echo "I was triggered from main"
