--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -17,9 +17,9 @@ jobs:
           STEP_VAR: "I am step var"
           step_var2: "I am another step var"
         run: |
-          echo: "Step env var: ${{ env.STEP_VAR}}"
-          echo: "Step env var:${{ env.step_var2}}"
-          echo: "Job env var: ${{ env.JOB_VAR}}"
+          echo "Step env var: ${{ env.STEP_VAR}}"
+          echo "Step env var:${{ env.step_var2}}"
+          echo "Job env var: ${{ env.JOB_VAR}}"
           echo "Workflow env var: ${{ env.WORKFLOW_VAR}}"
           echo "Overwritten: ${{ env.OVERWRITTEN}}"
       - name: Overwrite job Variable
