--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -17,13 +17,13 @@ jobs:
           STEP_VAR: "I am step var"
           step_var2: "I am another step var"
         run: |
-          echo "Step env var: ${{ env.STEP_VAR}}"
-          echo "Step env var:${{ env.step_var2}}"
-          echo "Job env var: ${{ env.JOB_VAR}}"
-          echo "Workflow env var: ${{ env.WORKFLOW_VAR}}"
-          echo "Overwritten: ${{ env.OVERWRITTEN}}"
+          echo "Step env var: $STEP_VAR"
+          echo "Step env var:$step_var2"
+          echo "Job env var: $JOB_VAR"
+          echo "Workflow env var: $WORKFLOW_VAR"
+          echo "Overwritten: $OVERWRITTEN"
       - name: Overwrite job Variable
         env:
           OVERWRITTEN: "I have been overwritten at the step level"
         run: |
-          echo "step env var: ${{ env.OVERWRITTEN}}"
+          echo "step env var: $OVERWRITTEN"
