--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -21,7 +21,7 @@ jobs:
           echo "Step env var:$step_var2"
           echo "Job env var: $JOB_VAR"
           echo "Workflow env var: $WORKFLOW_VAR"
-          echo "Overwritten: $OVERWRITTEN"
+          echo "Overwritten: ${{ env.OVERWRITTEN}}"
       - name: Overwrite job Variable
         env:
           OVERWRITTEN: "I have been overwritten at the step level"
