--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -4,6 +4,7 @@ on:
 env:
   WORKFLOW_VAR: "I am workflow env var"
   OVERWRITTEN_VAR: "I will be overwritten"
+  UNDEFINED_VAR_WITH_DEFAULT: vars.UNDEFINED_VAR | "default value" 
 
 jobs:
   echo:
@@ -27,3 +28,23 @@ jobs:
           OVERWRITTEN: "I have been overwritten at the step level"
         run: |
           echo "step env var: $OVERWRITTEN"
+  echo2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print Variables
+        run: |
+          echo "Repo var: ${{ env.REPOSITORY_VAR }}"
+  echo-prod:
+    runs-on: ubuntu-latest
+    environment: prod
+    steps:
+      - name: Print Prod Variables
+        run: |
+          echo "Repo var: $REPOSITORY_VAR"
+          echo "Environment var: $TARGET_VAR"
+  echo-undefined:
+    runs-on: ubuntu- latest
+    steps:
+      - name: Print Undefined Variables
+        run: | 
+          echo "Org var: $UNDEFINED_VAR_WITH_DEFAULT"
