--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -26,22 +26,22 @@ jobs:
       - name: Overwrite job Variable
         env:
           OVERWRITTEN: "I have been overwritten at the step level"
-        run: |
+        run: |  
           echo "step env var: $OVERWRITTEN"
   echo2:
     runs-on: ubuntu-latest
     steps:
       - name: Print Variables
         run: |
-          echo "Repo var: ${{ env.REPOSITORY_VAR }}"
+          echo "Repo var: ${{ vars.REPOSITORY_VAR }}"
   echo-prod:
     runs-on: ubuntu-latest
     environment: prod
     steps:
       - name: Print Prod Variables
         run: |
-          echo "Repo var: $REPOSITORY_VAR"
-          echo "Environment var: $TARGET_VAR"
+          echo "Repo var: ${{ vars.REPOSITORY_VAR }}"
+          echo "Environment var: ${{ vars.TARGET_VAR }}"
   echo-undefined:
     runs-on: ubuntu- latest
     steps:
