--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -4,6 +4,7 @@ on:
 env:
   WORKFLOW_VAR: "I am workflow env var"
   OVERWRITTEN_VAR: "I will be overwritten"
+  UNDEFINED_VAR_WITH_DEFAULT: ${{ vars.UNDEFINED_VAR || 'default value' }} 
 
 
 jobs:
@@ -47,4 +48,4 @@ jobs:
     steps:
       - name: Print Undefined Variables
         run: | 
-          echo "Org var: ${{ vars.UNDEFINED_VAR || 'default value' }} "
+          echo "Org var: $UNDEFINED_VAR_WITH_DEFAULT"
