--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -22,8 +22,7 @@ jobs:
           echo "Running tests..."
       - name: Failing tests
         if: ${{ inputs.pass-unit-tests == false }}
-        run: |
-          echo ""
+        run: exit 1
         
   deploy-nonprod:
     runs-on: ubuntu-latest
