--- a/.github/workflows/11-inputs.yaml
+++ b/.github/workflows/11-inputs.yaml
@@ -8,6 +8,7 @@ on:
         description: Skip deployment and only print build output
       target:
         type: environment
+        required: true
         description: Which environment the workflow will target
       tag:
         type: choice
@@ -27,6 +28,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     if: ${{ !inputs.dry-run }}
+    environment: ${{ inputs.target }}
     steps:
       - name: Deploy
         run: echo "Deploying to ${{ inputs.target }}"
