--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -1,4 +1,4 @@
-name: 13 - Working with Outputs
+name: 12 - Working with Outputs
 on:
   workflow_dispatch:
     inputs:
@@ -15,12 +15,17 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       status: ${{ steps.build.outputs.status }}
+      output1: ${{ steps.build.outputs.output1 }}
+      output2: ${{ steps.build.outputs.output2 }}
     steps:
       - name: Print GITHUB_OUTPUT path
-        run: echo "${{ inputs.build-status }}"
+        run: echo $GITHUB_OUTPUT
       - name: Build
         id: build
-        run: echo "status=${{ inputs.build-status }}" >> $GITHUB_OUTPUT
+        run: |
+          echo "status=${{ inputs.build-status }} output1=value1 output2=value2" >> $GITHUB_OUTPUT
+          echo "mistake=true" > $GITHUB_OUTPUT
+          echo $GITHUB_OUTPUT
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -28,4 +33,6 @@ jobs:
     steps:
       - name: Deploy
         run: echo "Deploying"
+      - name: Print Outputs
+        run: echo "${{ needs.build.outputs.output1}} ${{ needs.build.outputs.output2}}"
  
