--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -24,7 +24,7 @@ jobs:
         id: build
         run: |
           echo "status=${{ inputs.build-status }} output1=value1 output2=value2" >> $GITHUB_OUTPUT
-          echo "mistake=true" > $GITHUB_OUTPUT
+          echo "mistake=true" >> $GITHUB_OUTPUT
           echo $GITHUB_OUTPUT
   deploy:
     runs-on: ubuntu-latest
