--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -25,7 +25,7 @@ jobs:
         run: |
           echo "status=${{ inputs.build-status }} output1=value1 output2=value2" >> $GITHUB_OUTPUT
           echo "mistake=true" >> $GITHUB_OUTPUT
-          echo $GITHUB_OUTPUT
+          cat $GITHUB_OUTPUT
   deploy:
     runs-on: ubuntu-latest
     needs: build
