--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -23,7 +23,9 @@ jobs:
       - name: Build
         id: build
         run: |
-          echo "status=${{ inputs.build-status }} output1=value1 output2=value2" >> $GITHUB_OUTPUT
+          echo "status=${{ inputs.build-status }}" >> $GITHUB_OUTPUT
+          echo "output1=value1" >> $GITHUB_OUTPUT
+          echo "output2=value2" >> $GITHUB_OUTPUT
           echo "mistake=true" >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
   deploy:
