--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -28,12 +28,14 @@ jobs:
           echo "mistake=true" >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
       - name: Step with mistake
+        id: mistake
         run: |
           echo "output2=value2" >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: 
+      - build
     if: ${{ needs.build.outputs.status == 'success' }}
     steps:
       - name: Deploy
