--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -16,7 +16,7 @@ jobs:
     outputs:
       status: ${{ steps.build.outputs.status }}
       output1: ${{ steps.build.outputs.output1 }}
-      output2: ${{ steps.build.outputs.output2 }}
+      output2: ${{ steps.mistake.outputs.output2 }}
     steps:
       - name: Print GITHUB_OUTPUT path
         run: echo $GITHUB_OUTPUT
