--- a/.github/workflows/13-caching.yaml
+++ b/.github/workflows/13-caching.yaml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/setup-node@v3
         with: 
           node-version: '18.x'
+      - name: Upgrade npm to v11
+        run: npm install -g npm@11
       - name: Install Dependencies        
         run: npm ci
       - name: Testing
