--- a/.github/workflows/14-artifacts.yaml
+++ b/.github/workflows/14-artifacts.yaml
@@ -1,6 +1,9 @@
 name: 14 - Working with artifacts
 on: 
   workflow_dispatch
+env:
+  build-artifact-key: app-${{ github.sha }}
+  test-coverage-key: test-coverage-${{ github.sha }}
 
 jobs:
   test-build:
@@ -25,16 +28,18 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true' 
         run: npm install -g npm@11
       - name: Install dependencies
-        if: steps.cache.outcome.cache-hit != true
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Unit tests
         run: npm run test
+      - name: Upload test results
+        uses: 
       - name: Build code
         run: npm run build
       - name: Upload build files
         uses: actions/upload-artifact@v4
         with:
-          name: app
+          name: $NAME
           path: 14-artifacts/react-app/build
   deploy:
     runs-on: ubuntu-latest
@@ -44,7 +49,7 @@ jobs:
       - name: Download build files
         uses: actions/download-artifact@v4
         with:
-          name: app
+          name: $NAME
           path: build
       - name: Show folder structure
         run: ls -R
