--- a/.github/workflows/14-artifacts.yaml
+++ b/.github/workflows/14-artifacts.yaml
@@ -1,6 +1,6 @@
 name: 14 - Working with artifacts
 on: 
-  workflow_dispatch
+   workflow_dispatch:
 env:
   build-artifact-key: app-${{ github.sha }}
   test-coverage-key: test-coverage-${{ github.sha }}
@@ -32,8 +32,6 @@ jobs:
         run: npm ci
       - name: Unit tests
         run: npm run test
-      - name: Upload test results
-        uses: 
       - name: Build code
         run: npm run build
       - name: Upload build files
