--- a/.github/workflows/14-artifacts.yaml
+++ b/.github/workflows/14-artifacts.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload build files
         uses: actions/upload-artifact@v4
         with:
-          name: $build-artifact-key
+          name: ${{ env.build-artifact-key }}
           path: 14-artifacts/react-app/build
   deploy:
     runs-on: ubuntu-latest
@@ -47,7 +47,7 @@ jobs:
       - name: Download build files
         uses: actions/download-artifact@v4
         with:
-          name: $build-artifact-key
+          name: ${{ env.build-artifact-key }}
           path: build
       - name: Show folder structure
         run: ls -R
